// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormControl Component should match snapshot 1`] = `
.c0 {
  margin-bottom: 0.5rem;
}

.c0 .sc-bdvvaa {
  margin-bottom: 0.2rem;
}

<div
  class="c0"
>
  <label>
    control
  </label>
</div>
`;

exports[`FormControl Component should match snapshot with darkTheme 1`] = `
.c0 {
  margin-bottom: 0.5rem;
}

.c0 .sc-bdvvaa {
  margin-bottom: 0.2rem;
}

<div
  class="c0"
>
  <label>
    control
  </label>
</div>
`;

exports[`FormControl Component should match snapshot with lightTheme 1`] = `
.c0 {
  margin-bottom: 0.5rem;
}

.c0 .sc-bdvvaa {
  margin-bottom: 0.2rem;
}

<div
  class="c0"
>
  <label>
    control
  </label>
</div>
`;

exports[`FormControl Component should render caption 1`] = `
.c2 {
  display: block;
  font-weight: 500;
  font-size: 14px;
}

.c3 {
  margin-top: 0.2rem;
  display: block;
  font-size: 12px;
}

.c0 {
  margin-bottom: 0.5rem;
}

.c0 .c1 {
  margin-bottom: 0.2rem;
}

<div
  class="c0"
>
  <label>
    <span
      class="c1 c2"
    >
      A label
    </span>
    control
    <span
      class="c3"
    >
      A caption
    </span>
  </label>
</div>
`;

exports[`FormControl Component should render label 1`] = `
.c2 {
  display: block;
  font-weight: 500;
  font-size: 14px;
}

.c0 {
  margin-bottom: 0.5rem;
}

.c0 .c1 {
  margin-bottom: 0.2rem;
}

<div
  class="c0"
>
  <label>
    <span
      class="c1 c2"
    >
      A label
    </span>
    control
  </label>
</div>
`;
